--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <!-- old ui code  -->
         <link rel="stylesheet" href="./old/global.css">
         <link rel="stylesheet" href="./old/MyFunComponent.css" />
-        <link rel="stylesheet" href="./old/MyNewFunComponent.css" />
+        <link rel="stylesheet" href="./new/MyNewFunComponent.css" />
         <script src="./old/MyFunComponent.js"></script>
-        <script src="./old/MyNewFunComponent.js"></script>
+        <script src="./new/MyNewFunComponent.js"></script>
     </head>
     <body>
         <h1>Make Mootools and React Talk</h1>
